# sdkwork-birdcoder

./: .editorconfig  .env.example  .env.postgres.example  .gitignore  .gitmodules  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replace-colors.cjs  replace_colors.cjs  sdkwork-run-node  sdkwork-run-pnpm  sdkwork.app.config.json  sdkwork.workflow.json  tsconfig.base.json  tsconfig.json  tsconfig.runtime.json  vite.config.ts  存在问题列表.md
crates/sdkwork-api-birdcoder-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-birdcoder-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-birdcoder-assembly/src/: bootstrap.rs  business_metrics.rs  generated.rs  health.rs  lib.rs  observability.rs  openapi.rs
crates/sdkwork-api-birdcoder-standalone-gateway/: Cargo.toml
crates/sdkwork-api-birdcoder-standalone-gateway/etc/: sdkwork.deployment.config.json
crates/sdkwork-api-birdcoder-standalone-gateway/specs/: README.md  component.spec.json
crates/sdkwork-api-birdcoder-standalone-gateway/src/: business_metrics.rs  lib.rs  main.rs
crates/sdkwork-api-birdcoder-standalone-gateway/tests/: bootstrap_smoke.rs  listener_lifetime.rs
crates/sdkwork-birdcoder-api-server/: Cargo.toml
crates/sdkwork-birdcoder-api-server/src/: health.rs  lib.rs  main.rs  observability.rs  openapi.rs
crates/sdkwork-birdcoder-api-server/tests/: bootstrap_smoke.rs
crates/sdkwork-birdcoder-app-templates-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-app-templates-repository-sqlx/src/: lib.rs
crates/sdkwork-birdcoder-chat-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-chat-repository-sqlx/src/: lib.rs
crates/sdkwork-birdcoder-chat-service/: Cargo.toml
crates/sdkwork-birdcoder-chat-service/src/: context.rs  error.rs  lib.rs
crates/sdkwork-birdcoder-codeengine/: Cargo.toml
crates/sdkwork-birdcoder-codeengine/specs/: component.spec.json
crates/sdkwork-birdcoder-codeengine/src/: bounded_json.rs  catalog.rs  claude_code_provider.rs  claude_code_sessions.rs  codeengine_dialect.rs  codex.rs  codex_cli.rs  codex_provider.rs  codex_sessions.rs  gemini_provider.rs  lib.rs  native_session.rs  native_session_catalog.rs  opencode.rs  opencode_provider.rs  provider.rs  sdk_bridge.rs  session_records.rs  turns.rs
crates/sdkwork-birdcoder-coding-sessions-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-coding-sessions-repository-sqlx/specs/: component.spec.json
crates/sdkwork-birdcoder-coding-sessions-repository-sqlx/src/: error.rs
crates/sdkwork-birdcoder-coding-sessions-repository-sqlx/tests/: durable_operation_queue_tests.rs  list_filter_bind_order_tests.rs  native_session_history_reconciliation_tests.rs  native_session_materialization_tests.rs  postgresql_live.rs  realtime_event_append_tests.rs  runtime_status_list_tests.rs  sqlite_payload_loader_tests.rs  sqlite_schema_integrity.rs
crates/sdkwork-birdcoder-coding-sessions-service/: Cargo.toml
crates/sdkwork-birdcoder-coding-sessions-service/specs/: component.spec.json
crates/sdkwork-birdcoder-coding-sessions-service/src/: context.rs  error.rs  event_payload.rs  lib.rs  native_session_types.rs
crates/sdkwork-birdcoder-coding-sessions-service/tests/: native_session_event_tests.rs  projection_event_tests.rs  turn_event_tests.rs
crates/sdkwork-birdcoder-commerce-quota/: Cargo.toml
crates/sdkwork-birdcoder-commerce-quota/src/: lib.rs
crates/sdkwork-birdcoder-database-host/: Cargo.toml
crates/sdkwork-birdcoder-database-host/specs/: component.spec.json
crates/sdkwork-birdcoder-database-host/src/: lib.rs
crates/sdkwork-birdcoder-deployment-service/: Cargo.toml
crates/sdkwork-birdcoder-deployment-service/src/: context.rs  error.rs
crates/sdkwork-birdcoder-document-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-document-repository-sqlx/src/: lib.rs
crates/sdkwork-birdcoder-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-birdcoder-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-birdcoder-gateway-assembly/src/: bootstrap.rs  generated.rs  health.rs  lib.rs  observability.rs
crates/sdkwork-birdcoder-kernel-bridge/: Cargo.toml
crates/sdkwork-birdcoder-kernel-bridge/etc/: README.md  sdkwork.deployment.config.json
crates/sdkwork-birdcoder-kernel-bridge/specs/: component.spec.json
crates/sdkwork-birdcoder-kernel-bridge/src/: agent_projection.rs  boundaries.rs  chat_assistant.rs  engine_registry.rs  host.rs  interaction_projection.rs  kernel_turn_io.rs  lib.rs  live_interaction.rs  turn_executor.rs
crates/sdkwork-birdcoder-membership-repository-sqlite/: Cargo.toml
crates/sdkwork-birdcoder-membership-repository-sqlite/src/: error.rs
crates/sdkwork-birdcoder-membership-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-membership-repository-sqlx/src/: error.rs  lib.rs
crates/sdkwork-birdcoder-model-config-repository-sqlite/: Cargo.toml
crates/sdkwork-birdcoder-model-config-repository-sqlite/src/: error.rs
crates/sdkwork-birdcoder-model-config-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-model-config-repository-sqlx/src/: error.rs
crates/sdkwork-birdcoder-project-service/: Cargo.toml
crates/sdkwork-birdcoder-project-service/specs/: component.spec.json
crates/sdkwork-birdcoder-project-service/src/: business_code.rs  context.rs  error.rs  lib.rs  pagination.rs
crates/sdkwork-birdcoder-project-service/tests/: business_code_tests.rs  (+4 more)
crates/sdkwork-birdcoder-router-context/: Cargo.toml
crates/sdkwork-birdcoder-skill-packages-repository-sqlx/: Cargo.toml
crates/sdkwork-birdcoder-skill-packages-service/: Cargo.toml
crates/sdkwork-birdcoder-standalone-gateway/: Cargo.toml
crates/sdkwork-birdcoder-system-descriptor-service/: Cargo.toml
crates/sdkwork-birdcoder-tauri-host/: Cargo.toml  build.rs
crates/sdkwork-birdcoder-workspace-repository-sqlx/: Cargo.toml
crates/sdkwork-router-coding-sessions-app-api/: Cargo.toml
crates/sdkwork-router-deployment-backend-api/: Cargo.toml
(+3126 files in other folders)
