[workspace]
members = [
    # Route crates
    "crates/sdkwork-routes-system-app-api",
    "crates/sdkwork-routes-engine-catalog-app-api",
    "crates/sdkwork-routes-coding-sessions-app-api",
    "crates/sdkwork-routes-workspace-app-api",
    "crates/sdkwork-routes-document-app-api",
    "crates/sdkwork-routes-skill-packages-app-api",
    "crates/sdkwork-routes-membership-app-api",
    "crates/sdkwork-routes-deployment-backend-api",
    "crates/sdkwork-birdcoder-router-context",
    # Service crates
    "crates/sdkwork-birdcoder-coding-sessions-service",
    "crates/sdkwork-birdcoder-engine-catalog-service",
    "crates/sdkwork-birdcoder-native-sessions-service",
    "crates/sdkwork-birdcoder-workspace-service",
    "crates/sdkwork-birdcoder-project-service",
    "crates/sdkwork-birdcoder-deployment-service",
    "crates/sdkwork-birdcoder-skill-packages-service",
    "crates/sdkwork-birdcoder-app-templates-service",
    "crates/sdkwork-birdcoder-document-service",
    "crates/sdkwork-birdcoder-membership-service",
    "crates/sdkwork-birdcoder-system-descriptor-service",
    # Repository crates
    "crates/sdkwork-birdcoder-coding-sessions-repository-sqlx",
    "crates/sdkwork-birdcoder-workspace-repository-sqlx",
    "crates/sdkwork-birdcoder-skill-packages-repository-sqlx",
    "crates/sdkwork-birdcoder-app-templates-repository-sqlx",
    "crates/sdkwork-birdcoder-model-config-repository-sqlx",
    "crates/sdkwork-birdcoder-membership-repository-sqlx",
    "crates/sdkwork-birdcoder-document-repository-sqlx",
    "crates/sdkwork-birdcoder-sqlx-repository-pool",
    "crates/sdkwork-birdcoder-database-host",
    # Host/server crates
    "apps/sdkwork-birdcoder-pc/packages/sdkwork-birdcoder-pc-desktop/src-tauri",
    "crates/sdkwork-birdcoder-standalone-gateway",
    "crates/sdkwork-birdcoder-service-host",
    "crates/sdkwork-birdcoder-tauri-host",
    # Shared crates
    "crates/sdkwork-birdcoder-errors",
    # Relocated crates
    "crates/sdkwork-birdcoder-codeengine",
    "crates/sdkwork-birdcoder-kernel-bridge",
    "crates/sdkwork-birdcoder-git",
]
exclude = [
    "sdks",
    "external",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Commercial"
authors = ["sdkwork"]

[workspace.dependencies]
# Common third-party dependencies
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "any", "macros"] }

# Relocated crates
sdkwork-birdcoder-codeengine = { package = "sdkwork-birdcoder-codeengine", path = "crates/sdkwork-birdcoder-codeengine" }
sdkwork-birdcoder-kernel-bridge = { package = "sdkwork-birdcoder-kernel-bridge", path = "crates/sdkwork-birdcoder-kernel-bridge" }
sdkwork-birdcoder-git = { package = "sdkwork-birdcoder-git", path = "crates/sdkwork-birdcoder-git" }

# Route crates
sdkwork-routes-system-app-api = { path = "crates/sdkwork-routes-system-app-api" }
sdkwork-routes-engine-catalog-app-api = { path = "crates/sdkwork-routes-engine-catalog-app-api" }
sdkwork-routes-coding-sessions-app-api = { path = "crates/sdkwork-routes-coding-sessions-app-api" }
sdkwork-routes-workspace-app-api = { path = "crates/sdkwork-routes-workspace-app-api" }
sdkwork-routes-document-app-api = { path = "crates/sdkwork-routes-document-app-api" }
sdkwork-routes-skill-packages-app-api = { path = "crates/sdkwork-routes-skill-packages-app-api" }
sdkwork-routes-membership-app-api = { path = "crates/sdkwork-routes-membership-app-api" }
sdkwork-routes-deployment-backend-api = { path = "crates/sdkwork-routes-deployment-backend-api" }

# Service crates
sdkwork-birdcoder-coding-sessions-service = { path = "crates/sdkwork-birdcoder-coding-sessions-service" }
sdkwork-birdcoder-engine-catalog-service = { path = "crates/sdkwork-birdcoder-engine-catalog-service" }
sdkwork-birdcoder-native-sessions-service = { path = "crates/sdkwork-birdcoder-native-sessions-service" }
sdkwork-birdcoder-workspace-service = { path = "crates/sdkwork-birdcoder-workspace-service" }
sdkwork-birdcoder-project-service = { path = "crates/sdkwork-birdcoder-project-service" }
sdkwork-birdcoder-deployment-service = { path = "crates/sdkwork-birdcoder-deployment-service" }
sdkwork-birdcoder-skill-packages-service = { path = "crates/sdkwork-birdcoder-skill-packages-service" }
sdkwork-birdcoder-app-templates-service = { path = "crates/sdkwork-birdcoder-app-templates-service" }
sdkwork-birdcoder-document-service = { path = "crates/sdkwork-birdcoder-document-service" }
sdkwork-birdcoder-membership-service = { path = "crates/sdkwork-birdcoder-membership-service" }
sdkwork-birdcoder-system-descriptor-service = { path = "crates/sdkwork-birdcoder-system-descriptor-service" }

# Repository crates
sdkwork-birdcoder-coding-sessions-repository-sqlx = { path = "crates/sdkwork-birdcoder-coding-sessions-repository-sqlx" }
sdkwork-birdcoder-workspace-repository-sqlx = { path = "crates/sdkwork-birdcoder-workspace-repository-sqlx" }
sdkwork-birdcoder-skill-packages-repository-sqlx = { path = "crates/sdkwork-birdcoder-skill-packages-repository-sqlx" }
sdkwork-birdcoder-app-templates-repository-sqlx = { path = "crates/sdkwork-birdcoder-app-templates-repository-sqlx" }
sdkwork-birdcoder-model-config-repository-sqlx = { path = "crates/sdkwork-birdcoder-model-config-repository-sqlx" }
sdkwork-birdcoder-membership-repository-sqlx = { path = "crates/sdkwork-birdcoder-membership-repository-sqlx" }
sdkwork-birdcoder-document-repository-sqlx = { path = "crates/sdkwork-birdcoder-document-repository-sqlx" }
sdkwork-birdcoder-sqlx-repository-pool = { path = "crates/sdkwork-birdcoder-sqlx-repository-pool" }

# Host/server crates
sdkwork-birdcoder-standalone-gateway = { path = "crates/sdkwork-birdcoder-standalone-gateway" }
sdkwork-birdcoder-server = { package = "sdkwork-birdcoder-standalone-gateway", path = "crates/sdkwork-birdcoder-standalone-gateway" }
sdkwork-birdcoder-service-host = { path = "crates/sdkwork-birdcoder-service-host" }
sdkwork-birdcoder-tauri-host = { path = "crates/sdkwork-birdcoder-tauri-host" }

# Shared crates
sdkwork-birdcoder-errors = { path = "crates/sdkwork-birdcoder-errors" }

# Cross-repo SDKWork sources (declared once at the root)
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork_routes_iam_app_api = { package = "sdkwork-routes-iam-app-api", path = "../sdkwork-iam/crates/sdkwork-routes-iam-app-api" }
sdkwork_routes_iam_backend_api = { package = "sdkwork-routes-iam-backend-api", path = "../sdkwork-iam/crates/sdkwork-routes-iam-backend-api" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork_iam_web_adapter = { package = "sdkwork-iam-web-adapter", path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_embedded_application_bootstrap = { package = "sdkwork-iam-embedded-application-bootstrap", path = "../sdkwork-iam/crates/sdkwork-iam-embedded-application-bootstrap" }
sdkwork_iam_database_host = { package = "sdkwork-iam-database-host", path = "../sdkwork-iam/crates/sdkwork-iam-database-host" }
sdkwork_database_config = { package = "sdkwork-database-config", path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork_database_lifecycle = { package = "sdkwork-database-lifecycle", path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork_database_spi = { package = "sdkwork-database-spi", path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork_database_sqlx = { package = "sdkwork-database-sqlx", path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-birdcoder-database-host = { path = "crates/sdkwork-birdcoder-database-host" }
sdkwork-birdcoder-router-context = { path = "crates/sdkwork-birdcoder-router-context" }
sdkwork_iam_directory_repository_sqlx = { package = "sdkwork-iam-directory-repository-sqlx", path = "../sdkwork-iam/crates/sdkwork-iam-directory-repository-sqlx" }
sdkwork_iam_tauri_host = { package = "sdkwork-iam-tauri-host", path = "../sdkwork-iam/crates/sdkwork-iam-tauri-host" }
sdkwork-terminal-control-plane = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-control-plane" }
sdkwork-terminal-pty-runtime = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-pty-runtime" }
sdkwork-terminal-protocol = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-protocol" }
sdkwork-terminal-replay-store = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-replay-store" }
sdkwork-terminal-session-runtime = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-session-runtime" }

# sdkwork-kernel agent SPI (sibling checkout)
sdkwork-agent-kernel = { path = "../sdkwork-kernel/sdkwork-agent-kernel" }
sdkwork-code-kernel = { path = "../sdkwork-kernel/sdkwork-code-kernel" }
sdkwork-agents-runtime-facade = { path = "../sdkwork-agents/crates/sdkwork-agents-runtime-facade" }

