[workspace]
members = [
    "crates/sdkwork-api-birdcoder-assembly",
    "crates/sdkwork-routes-system-app-api",
    "crates/sdkwork-routes-workspace-app-api",
    "crates/sdkwork-birdcoder-router-context",
    "crates/sdkwork-birdcoder-workspace-service",
    "crates/sdkwork-birdcoder-project-service",
    "crates/sdkwork-birdcoder-system-descriptor-service",
    "crates/sdkwork-birdcoder-workspace-repository-sqlx",
    "crates/sdkwork-birdcoder-database-host",
    "crates/sdkwork-api-birdcoder-standalone-gateway",
    "crates/sdkwork-birdcoder-tauri-host",
    "crates/sdkwork-birdcoder-errors",
    "crates/sdkwork-birdcoder-git",
    "apps/sdkwork-birdcoder-pc/packages/sdkwork-birdcoder-pc-desktop/src-tauri",
]
exclude = ["sdks", "external"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["sdkwork"]

[workspace.dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "macros"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
keyring = "4.1.5"

sdkwork-api-birdcoder-assembly = { path = "crates/sdkwork-api-birdcoder-assembly" }
sdkwork-api-birdcoder-standalone-gateway = { path = "crates/sdkwork-api-birdcoder-standalone-gateway" }
sdkwork-routes-system-app-api = { path = "crates/sdkwork-routes-system-app-api" }
sdkwork-routes-workspace-app-api = { path = "crates/sdkwork-routes-workspace-app-api" }
sdkwork-birdcoder-router-context = { path = "crates/sdkwork-birdcoder-router-context" }
sdkwork-birdcoder-workspace-service = { path = "crates/sdkwork-birdcoder-workspace-service" }
sdkwork-birdcoder-project-service = { path = "crates/sdkwork-birdcoder-project-service" }
sdkwork-birdcoder-system-descriptor-service = { path = "crates/sdkwork-birdcoder-system-descriptor-service" }
sdkwork-birdcoder-workspace-repository-sqlx = { path = "crates/sdkwork-birdcoder-workspace-repository-sqlx" }
sdkwork-birdcoder-database-host = { path = "crates/sdkwork-birdcoder-database-host" }
sdkwork-birdcoder-tauri-host = { path = "crates/sdkwork-birdcoder-tauri-host" }
sdkwork-birdcoder-errors = { path = "crates/sdkwork-birdcoder-errors" }
sdkwork-birdcoder-git = { path = "crates/sdkwork-birdcoder-git" }

sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork_iam_context_service = { package = "sdkwork-iam-context-service", path = "../sdkwork-iam/crates/sdkwork-iam-context-service" }
sdkwork_iam_web_adapter = { package = "sdkwork-iam-web-adapter", path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_database_config = { package = "sdkwork-database-config", path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork_database_lifecycle = { package = "sdkwork-database-lifecycle", path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork_database_spi = { package = "sdkwork-database-spi", path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork_database_sqlx = { package = "sdkwork-database-sqlx", path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_database_id = { package = "sdkwork-database-id", path = "../sdkwork-database/crates/sdkwork-database-id" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
sdkwork-terminal-control-plane = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-control-plane" }
sdkwork-terminal-pty-runtime = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-pty-runtime" }
sdkwork-terminal-protocol = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-protocol" }
sdkwork-terminal-replay-store = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-replay-store" }
sdkwork-terminal-session-runtime = { path = "../sdkwork-terminal/apps/sdkwork-terminal-pc/crates/sdkwork-terminal-session-runtime" }
