[package]
name = "sdkwork-api-birdcoder-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "sdkwork-api-birdcoder-standalone-gateway"

[[bin]]
name = "sdkwork-api-birdcoder-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
sdkwork-web-bootstrap = { workspace = true, features = ["otel", "redis"] }
sdkwork-api-birdcoder-assembly.workspace = true

# Dependency/platform route adapters
sdkwork-routes-agents-app-api = { workspace = true }
sdkwork-routes-terminal-app-api = { workspace = true }
sdkwork-terminal-runtime-node = { workspace = true }
sdkwork-agents-kernel-bridge = { workspace = true }
sdkwork_routes_iam_app_api = { workspace = true }
sdkwork_routes_iam_backend_api = { workspace = true }
sdkwork_iam_context_service = { workspace = true }
sdkwork-web-axum.workspace = true
sdkwork-web-core = { workspace = true }
sdkwork-web-contract = { workspace = true }
sdkwork_iam_web_adapter.workspace = true
sdkwork_iam_embedded_application_bootstrap.workspace = true
sdkwork_iam_database_host.workspace = true
sdkwork_database_sqlx = { workspace = true }
sdkwork_database_id = { workspace = true }
sdkwork_database_config = { workspace = true }
sdkwork-birdcoder-database-host = { workspace = true }
sqlx = { workspace = true }
sdkwork-birdcoder-document-repository-sqlx = { workspace = true }
sdkwork-birdcoder-codeengine = { workspace = true }
sdkwork-birdcoder-kernel-bridge = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }
sdkwork-birdcoder-commerce-quota = { workspace = true }
sdkwork-utils-rust.workspace = true
sdkwork-birdcoder-router-context = { workspace = true }
redis = { workspace = true }

# Service crates
sdkwork-birdcoder-coding-sessions-service = { workspace = true }
sdkwork-birdcoder-workspace-service = { workspace = true }
sdkwork-birdcoder-project-service = { workspace = true }
sdkwork-birdcoder-deployment-service = { workspace = true }
sdkwork-birdcoder-engine-catalog-service = { workspace = true }
sdkwork-birdcoder-native-sessions-service = { workspace = true }
sdkwork-birdcoder-git = { workspace = true }
sdkwork-birdcoder-skill-packages-service = { workspace = true }
sdkwork-birdcoder-app-templates-service = { workspace = true }
sdkwork-birdcoder-document-service = { workspace = true }
sdkwork-birdcoder-commerce-service = { workspace = true }
sdkwork-birdcoder-system-descriptor-service = { workspace = true }

# Repository crates
sdkwork-birdcoder-coding-sessions-repository-sqlx = { workspace = true }
sdkwork-birdcoder-workspace-repository-sqlx = { workspace = true }
sdkwork-birdcoder-skill-packages-repository-sqlx = { workspace = true }
sdkwork-birdcoder-model-config-repository-sqlx = { workspace = true }
sdkwork-birdcoder-commerce-repository-sqlx = { workspace = true }
sdkwork-birdcoder-sqlx-repository-pool = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true, features = ["test-util"] }
tokio-tungstenite = "0.29"

