[package]
name = "sdkwork-api-birdcoder-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "sdkwork-api-birdcoder-standalone-gateway"

[[bin]]
name = "sdkwork-api-birdcoder-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing = "0.1"
sdkwork-web-bootstrap.workspace = true
sdkwork-api-birdcoder-assembly.workspace = true
sdkwork_database_sqlx.workspace = true
