[package]
name = "sdkwork-api-birdcoder-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "sdkwork-api-birdcoder-standalone-gateway"

[[bin]]
name = "sdkwork-api-birdcoder-standalone-gateway"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing = "0.1"
sdkwork-web-bootstrap.workspace = true
sdkwork-api-birdcoder-assembly.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tower = { version = "0.5", features = ["util"] }
