[package]
name = "sdkwork-birdcoder-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "sdkwork-birdcoder-api-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Route crates
sdkwork-router-system-app-api = { workspace = true }
sdkwork-router-engine-catalog-app-api = { workspace = true }
sdkwork-router-coding-sessions-app-api = { workspace = true }
sdkwork-router-workspace-app-api = { workspace = true }
sdkwork-router-document-app-api = { workspace = true }
sdkwork-router-skill-packages-app-api = { workspace = true }
sdkwork-router-membership-app-api = { workspace = true }
sdkwork-router-deployment-backend-api = { workspace = true }
sdkwork_router_iam_app_api = { workspace = true }
sdkwork-web-axum.workspace = true
sdkwork-web-core = { workspace = true }
sdkwork-web-contract = { workspace = true }
sdkwork_iam_web_adapter.workspace = true
sdkwork_database_sqlx = { workspace = true }
sdkwork_database_config = { workspace = true }
sdkwork-birdcoder-database-host = { workspace = true }
sqlx = { workspace = true }
sdkwork-birdcoder-document-repository-sqlx = { workspace = true }
sdkwork-birdcoder-codeengine = { workspace = true }

# Service crates
sdkwork-birdcoder-coding-sessions-service = { workspace = true }
sdkwork-birdcoder-workspace-service = { workspace = true }
sdkwork-birdcoder-project-service = { workspace = true }
sdkwork-birdcoder-deployment-service = { workspace = true }
sdkwork-birdcoder-engine-catalog-service = { workspace = true }
sdkwork-birdcoder-native-sessions-service = { workspace = true }
sdkwork-birdcoder-skill-packages-service = { workspace = true }
sdkwork-birdcoder-app-templates-service = { workspace = true }
sdkwork-birdcoder-document-service = { workspace = true }
sdkwork-birdcoder-membership-service = { workspace = true }
sdkwork-birdcoder-system-descriptor-service = { workspace = true }

# Repository crates
sdkwork-birdcoder-coding-sessions-repository-sqlx = { workspace = true }
sdkwork-birdcoder-workspace-repository-sqlx = { workspace = true }
sdkwork-birdcoder-skill-packages-repository-sqlx = { workspace = true }
sdkwork-birdcoder-model-config-repository-sqlx = { workspace = true }
sdkwork-birdcoder-membership-repository-sqlx = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tokio = { workspace = true }
