[package]
name = "sdkwork-birdcoder-app-templates-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
sqlx = { workspace = true, features = ["sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
sdkwork-birdcoder-app-templates-service = { workspace = true }
