[package]
name = "sdkwork-birdcoder-chat-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
sqlx = { workspace = true }
time = { workspace = true }
sdkwork-birdcoder-chat-service = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }
sdkwork-birdcoder-sqlx-repository-pool = { workspace = true }
sdkwork-utils-rust.workspace = true
