[package]
name = "sdkwork-birdcoder-chat-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true }
time = { workspace = true }
sdkwork-utils-rust.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
