[package]
name = "sdkwork-birdcoder-codeengine"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing"] }
ureq = "2"
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

