[package]
name = "sdkwork-birdcoder-coding-sessions-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { version = "1", features = ["full"] }
sdkwork-birdcoder-coding-sessions-service = { workspace = true }



