[package]
name = "sdkwork-birdcoder-commerce-quota"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sqlx = { workspace = true }
time = { workspace = true }
tracing = "0.1"

[dev-dependencies]
time = { workspace = true, features = ["formatting", "parsing"] }
