[package]
name = "sdkwork-birdcoder-database-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SDKWork Birdcoder database lifecycle bootstrap."

[lib]
name = "sdkwork_birdcoder_database_host"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15"
sdkwork_database_config = { workspace = true }
sdkwork_database_lifecycle = { workspace = true }
sdkwork_database_spi = { workspace = true }
sdkwork_database_sqlx = { workspace = true }
sdkwork_database_id = { workspace = true }
