[package]
name = "sdkwork-birdcoder-deployment-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
time = { workspace = true }
uuid = { workspace = true }


