[package]
name = "sdkwork-birdcoder-document-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
sqlx = { workspace = true }
sdkwork-birdcoder-document-service = { workspace = true }
sdkwork-birdcoder-errors = { path = "../sdkwork-birdcoder-errors" }
sdkwork-birdcoder-project-service = { workspace = true }
sdkwork-birdcoder-sqlx-repository-pool = { workspace = true }
