[package]
name = "sdkwork-birdcoder-kernel-bridge"
version = "0.1.0"
edition = "2021"
description = "BirdCoder adapter for sdkwork-agents runtime facade"

[dependencies]
sdkwork-agents-runtime-facade = { workspace = true }
sdkwork-birdcoder-codeengine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "birdcoder-kernel-turn"
path = "src/bin/kernel_turn.rs"
