[package]
name = "sdkwork-birdcoder-membership-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
sdkwork-birdcoder-membership-service = { workspace = true }
sdkwork-birdcoder-project-service = { workspace = true }
sdkwork-birdcoder-sqlx-repository-pool = { workspace = true }
