[package]
name = "sdkwork-birdcoder-router-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum = { workspace = true }
sdkwork_iam_context_service = { workspace = true }
sdkwork_iam_web_adapter = { workspace = true }
sdkwork-web-core = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }
sdkwork-utils-rust = { workspace = true }
