[package]
name = "sdkwork-birdcoder-skill-packages-repository-sqlx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }
sdkwork-birdcoder-skill-packages-service = { workspace = true }
sdkwork-birdcoder-sqlx-repository-pool = { workspace = true }



