[package]
name = "sdkwork-birdcoder-skill-packages-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sdkwork-birdcoder-errors = { workspace = true }


